--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="col-md-10 col-md-offset-1">
             <!-- About Us Title & Description -->
             <div class="section-title">
-              <h2>Title</h2>
+              <h2>about us</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent rhoncus ultricies nibh, vitae sodales purus. Aenean
@@ -148,7 +148,7 @@
                 <!-- choose us item 1 -->
                 <div class="choose-us-item">
                   <!-- choose us item icon -->
-                  <i class="fa fa-bolt"></i>
+                  <div><i class="fa fa-bolt"></i></div>
 
                   <!-- choose us item title and des -->
                   <h3>QUISQUE LACUS DUI</h3>
@@ -162,7 +162,7 @@
                 <!-- choose us item 2 -->
                 <div class="choose-us-item">
                   <!-- choose us item icon -->
-                  <i class="fa fa-bullhorn"></i>
+                  <div><i class="fa fa-bullhorn"></i></div>
 
                   <!-- choose us item title and des -->
                   <h3>DONEC EU PLACERAT NISI</h3>
@@ -176,7 +176,7 @@
                 <!-- choose us item 3 -->
                 <div class="choose-us-item">
                   <!-- choose us item icon -->
-                  <i class="fa fa-flag-checkered"></i>
+                  <div><i class="fa fa-flag-checkered"></i></div>
 
                   <!-- choose us item title and des -->
                   <h3>PERSPICIATIS UNDE OMNIS</h3>
