--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Responsive Website</title>
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="/vendors/css/all.css" />
+    <link rel="stylesheet" href="./vendors/css/all.css" />
 
     <!-- Bootrstrap -->
-    <link rel="stylesheet" href="/vendors/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./vendors/css/bootstrap.min.css" />
 
     <!-- Main Style -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Header Section -->
@@ -195,12 +195,12 @@
     </section>
 
     <!-- JQuery -->
-    <script src="/vendors/js/jquery-3.4.1.js"></script>
+    <script src="./vendors/js/jquery-3.4.1.js"></script>
 
     <!-- Bootstrap -->
-    <script src="/vendors/js/bootstrap.min.js"></script>
+    <script src="./vendors/js/bootstrap.min.js"></script>
 
     <!-- Main JS -->
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
