--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="home">
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a href="#home" class="navbar-brand">
-          <img src="/images/logo-small.png" alt="" srcset="" />
+          <img src="./images/logo-small.png" alt="" srcset="" />
         </a>
 
         <button
@@ -67,7 +67,7 @@
                 <div class="logo text-center">
                   <img
                     class="img-fluid"
-                    src="/images/logo.png"
+                    src="./images/logo.png"
                     alt=""
                     srcset=""
                   />
@@ -94,7 +94,7 @@
                 <div class="header-phone">
                   <img
                     class="img-cellphone-header img-fluid"
-                    src="/images/iphone-header.png"
+                    src="./images/iphone-header.png"
                     alt="Header Iphone"
                     srcset=""
                   />
@@ -130,7 +130,7 @@
             <div class="col-md-6">
               <!-- About Iphone -->
               <div class="about-iphone">
-                <img src="/images/about-iphone.png" alt="Iphone" srcset="" />
+                <img src="./images/about-iphone.png" alt="Iphone" srcset="" />
               </div>
             </div>
             <div class="col-md-6">
