--- a/index.html
+++ b/index.html
@@ -194,6 +194,111 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section id="testimonial">
+      <div class="testimonial-overlay">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- carousel -->
+              <div
+                id="carouselTestimonialIndicator"
+                class="carousel slide"
+                data-ride="carousel"
+              >
+                <!-- indicators -->
+                <ol class="carousel-indicators">
+                  <li
+                    data-target="#carouselTestimonialIndicator"
+                    data-slide-to="0"
+                    class="active"
+                  ></li>
+                  <li
+                    data-target="#carouselTestimonialIndicator"
+                    data-slide-to="1"
+                  ></li>
+                  <li
+                    data-target="#carouselTestimonialIndicator"
+                    data-slide-to="2"
+                  ></li>
+                </ol>
+                <!-- itens -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active text-center">
+                    <img src="./images/client-01.jpg" alt="First Testimonial" />
+                    <div class="testimonial-caption">
+                      <h2>Daniel</h2>
+                      <h4><span>Sr. Software Enginner, </span>Blue Gyms</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        olore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item text-center">
+                    <img
+                      src="./images/client-02.jpg"
+                      alt="Second Testimonial"
+                    />
+                    <div class="testimonial-caption">
+                      <h2>Rauls Pole</h2>
+                      <h4><span>Marketing Manager, </span>Risko</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        olore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item text-center">
+                    <img src="./images/client-03.jpg" alt="Third Testimonial" />
+                    <div class="testimonial-caption">
+                      <h2>Jim So</h2>
+                      <h4><span>Assistent Manager, </span>Gidfo</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore et
+                        olore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- controls -->
+                <a
+                  class="carousel-control-prev"
+                  href="#carouselTestimonialIndicator"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#carouselTestimonialIndicator"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- JQuery -->
     <script src="./vendors/js/jquery-3.4.1.js"></script>
 
