--- a/index.html
+++ b/index.html
@@ -299,6 +299,135 @@
       </div>
     </section>
 
+    <!-- Features Section -->
+    <section id="features">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1">
+            <!-- Title Section -->
+            <div class="section-title">
+              <h2>features</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent rhoncus ultricies nibh, vitae sodales purus. Aenean
+                volutpat ullamcorper cursus. Duis tristique sit amet augue ac
+                vestibulum.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="features-inner-wrapper">
+        <div class="container">
+          <div class="row">
+            <!-- left feature list -->
+            <div class="col-md-4">
+              <!-- item 1 -->
+              <div class="left-feature-item">
+                <!-- item icon -->
+                <div class="left-feature-item-icon">
+                  <i class="fa fa-desktop"></i>
+                </div>
+                <!-- item title and description -->
+                <h3>retina ready</h3>
+                <p>
+                  Lipsum Cum sociis natoque penatibus et magnis dis parturient
+                  montes, nascetur ridiculus mus. Quisque lacus dui, interdum
+                  sit amet varius a, cursus sit amet sapien. Donec eu placerat
+                  nisi.
+                </p>
+              </div>
+              <!-- item 2 -->
+              <div class="left-feature-item">
+                <!-- item icon -->
+                <div class="left-feature-item-icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <!-- item title and description -->
+                <h3>mobile ready</h3>                
+                <p>
+                  Lipsum Cum sociis natoque penatibus et magnis dis parturient
+                  montes, nascetur ridiculus mus. Quisque lacus dui, interdum
+                  sit amet varius a, cursus sit amet sapien. Donec eu placerat
+                  nisi.
+                </p>
+              </div>
+              <!-- item 3 -->
+              <div class="left-feature-item">
+                <!-- item icon -->
+                <div class="left-feature-item-icon">
+                  <i class="fa fa-eye"></i>
+                </div>
+                <!-- item title and description -->
+                <h3>easy layout</h3>
+                <p>
+                  Lipsum Cum sociis natoque penatibus et magnis dis parturient
+                  montes, nascetur ridiculus mus. Quisque lacus dui, interdum
+                  sit amet varius a, cursus sit amet sapien. Donec eu placerat
+                  nisi.
+                </p>
+              </div>
+            </div>
+            <!-- feature iphone -->
+            <div class="col-md-4">
+              <div class="feature-iphone">
+                <img src="./images/iphone-02.png" alt="Feature Iphone" />
+              </div>
+            </div>
+            <!-- right feature list -->
+            <div class="col-md-4">
+              <!-- item 1 -->
+              <div class="right-feature-item">
+                <!-- item icon -->
+                <div class="right-feature-item-icon">
+                  <i class="fa fa-certificate"></i>
+                </div>
+                <!-- item title and description -->
+                <h3>certified solution</h3>
+                <p>
+                  Lipsum Cum sociis natoque penatibus et magnis dis parturient
+                  montes, nascetur ridiculus mus. Quisque lacus dui, interdum
+                  sit amet varius a, cursus sit amet sapien. Donec eu placerat
+                  nisi.
+                </p>
+              </div>
+              <!-- item 2 -->
+              <div class="right-feature-item">
+                <!-- item icon -->
+                <div class="right-feature-item-icon">
+                  <i class="fa fa-rss"></i>
+                </div>
+                <!-- item title and description -->
+                <h3>constant feed</h3>
+                <p>
+                  Lipsum Cum sociis natoque penatibus et magnis dis parturient
+                  montes, nascetur ridiculus mus. Quisque lacus dui, interdum
+                  sit amet varius a, cursus sit amet sapien. Donec eu placerat
+                  nisi.
+                </p>
+              </div>
+              <!-- item 3 -->
+              <div class="right-feature-item">
+                <!-- item icon -->
+                <div class="right-feature-item-icon">
+                  <i class="fa fa-database"></i>
+                </div>
+                <!-- item title and description -->
+                <h3>secure data</h3>
+                <p>
+                  Lipsum Cum sociis natoque penatibus et magnis dis parturient
+                  montes, nascetur ridiculus mus. Quisque lacus dui, interdum
+                  sit amet varius a, cursus sit amet sapien. Donec eu placerat
+                  nisi.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- JQuery -->
     <script src="./vendors/js/jquery-3.4.1.js"></script>
 
