Purchase Now Section

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                   <i class="fa fa-mobile-alt"></i>
                 </div>
                 <!-- item title and description -->
-                <h3>mobile ready</h3>                
+                <h3>mobile ready</h3>
                 <p>
                   Lipsum Cum sociis natoque penatibus et magnis dis parturient
                   montes, nascetur ridiculus mus. Quisque lacus dui, interdum
@@ -423,6 +423,26 @@
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Purchase Section -->
+    <section id="purchase-now" class="purchase-now">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+              rhoncus ultricies nibh, vitae sodales purus. Aenean volutpat
+              ullamcorper cursus. Duis tristique sit amet augue ac vestibulum.
+            </p>
+          </div>
+          <div class="col-md-3">
+            <a href="#" class="btn btn-primary btn-purchase-now"
+              >Purchase Now</a
+            >
           </div>
         </div>
       </div>
