--- a/index.html
+++ b/index.html
@@ -553,10 +553,10 @@
                         role="button"
                         data-slide="prev"
                       >
-                        <span
-                          class="carousel-control-prev-icon"
-                          aria-hidden="true"
+                        <span class="carousel-control-prev-icon"
+                          ><i class="fa fa-angle-left" aria-hidden="true"></i
                         ></span>
+
                         <span class="sr-only">Previous</span>
                       </a>
                       <a
@@ -565,9 +565,8 @@
                         role="button"
                         data-slide="next"
                       >
-                        <span
-                          class="carousel-control-next-icon"
-                          aria-hidden="true"
+                        <span class="carousel-control-next-icon"
+                          ><i class="fa fa-angle-right" aria-hidden="true"></i
                         ></span>
                         <span class="sr-only">Next</span>
                       </a>
