Add new image to screen section

--- a/index.html
+++ b/index.html
@@ -541,6 +541,26 @@
                                     />
                                   </div>
                                 </div>
+                                <!-- screen 2 -->
+                                <div class="col-md-4">
+                                  <div class="screen-item">
+                                    <img
+                                      class="img-fluid"
+                                      src="./images/screen-05.png"
+                                      alt=""
+                                    />
+                                  </div>
+                                </div>
+                                <!-- screen 3 -->
+                                <div class="col-md-4">
+                                  <div class="screen-item">
+                                    <img
+                                      class="img-fluid"
+                                      src="./images/screen-02.png"
+                                      alt=""
+                                    />
+                                  </div>
+                                </div>
                               </div>
                             </div>
                           </div>
