--- a/index.html
+++ b/index.html
@@ -600,6 +600,48 @@
       </div>
     </section>
 
+    <!-- Counter Section -->
+    <section id="counter" class="counter">
+      <div class="counter-overlay">
+        <div class="container">
+          <div class="row">
+            <!-- counter item 1 -->
+            <div class="col-md-3">
+              <div class="counter-item">
+                <i class="fa fa-cloud-download-alt"></i>
+                <h2>+<span class="count">1500</span></h2>
+                <p>downloads</p>
+              </div>
+            </div>
+            <!-- counter item 2 -->
+            <div class="col-md-3">
+              <div class="counter-item">
+                <i class="fa fa-gift"></i>
+                <h2>+<span class="count">3500</span></h2>
+                <p>awards</p>
+              </div>
+            </div>
+            <!-- counter item 3 -->
+            <div class="col-md-3">
+              <div class="counter-item">
+                <i class="far fa-heart"></i>
+                <h2>+<span class="count">200</span></h2>
+                <p>likes</p>
+              </div>
+            </div>
+            <!-- counter item 4 -->
+            <div class="col-md-3">
+              <div class="counter-item">
+                <i class="fa fa-check"></i>
+                <h2>+<span class="count">1000</span></h2>
+                <p>recomended</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!--  -->
     <!--  -->
     <!--  -->
