change img paths to amazon cloudfront

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       class="navbar fixed-top navbar-expand-lg navbar-light bg-light"
     >
       <a href="#home" class="navbar-brand">
-        <img src="./images/logo-small.png" alt="" srcset="" />
+        <img
+          src="http://d2dtjea2l357xb.cloudfront.net/logo-small.png"
+          alt=""
+          srcset=""
+        />
       </a>
 
       <button
@@ -69,7 +73,7 @@
               <div class="logo text-center">
                 <img
                   class="img-fluid"
-                  src="./images/logo.png"
+                  src="http://d2dtjea2l357xb.cloudfront.net/logo.png"
                   alt=""
                   srcset=""
                 />
@@ -96,7 +100,7 @@
               <div class="home-phone">
                 <img
                   class="img-cellphone-home img-fluid"
-                  src="./images/iphone-home.png"
+                  src="http://d2dtjea2l357xb.cloudfront.net/iphone-home.png"
                   alt="Home Iphone"
                   srcset=""
                 />
@@ -131,7 +135,11 @@
             <div class="col-md-6">
               <!-- About Iphone -->
               <div class="about-iphone">
-                <img src="./images/about-iphone.png" alt="Iphone" srcset="" />
+                <img
+                  src="http://d2dtjea2l357xb.cloudfront.net/about-iphone.png"
+                  alt="Iphone"
+                  srcset=""
+                />
               </div>
             </div>
             <div class="col-md-6">
@@ -226,7 +234,10 @@
                 <!-- itens -->
                 <div class="carousel-inner">
                   <div class="carousel-item active text-center">
-                    <img src="./images/client-01.jpg" alt="First Testimonial" />
+                    <img
+                      src="http://d2dtjea2l357xb.cloudfront.net/client-01.jpg"
+                      alt="First Testimonial"
+                    />
                     <div class="testimonial-caption">
                       <h2>Daniel</h2>
                       <h4><span>Sr. Software Enginner, </span>Blue Gyms</h4>
@@ -240,7 +251,7 @@
                   </div>
                   <div class="carousel-item text-center">
                     <img
-                      src="./images/client-02.jpg"
+                      src="http://d2dtjea2l357xb.cloudfront.net/client-02.jpg"
                       alt="Second Testimonial"
                     />
                     <div class="testimonial-caption">
@@ -255,7 +266,10 @@
                     </div>
                   </div>
                   <div class="carousel-item text-center">
-                    <img src="./images/client-03.jpg" alt="Third Testimonial" />
+                    <img
+                      src="http://d2dtjea2l357xb.cloudfront.net/client-03.jpg"
+                      alt="Third Testimonial"
+                    />
                     <div class="testimonial-caption">
                       <h2>Jim So</h2>
                       <h4><span>Assistent Manager, </span>Gidfo</h4>
@@ -373,7 +387,10 @@
             <!-- feature iphone -->
             <div class="col-md-4">
               <div class="feature-iphone">
-                <img src="./images/iphone-02.png" alt="Feature Iphone" />
+                <img
+                  src="http://d2dtjea2l357xb.cloudfront.net/iphone-02.png"
+                  alt="Feature Iphone"
+                />
               </div>
             </div>
             <!-- right feature list -->
@@ -498,7 +515,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="./images/screen-01.png"
+                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-01.png"
                                       alt=""
                                     />
                                   </div>
@@ -508,7 +525,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="./images/screen-02.png"
+                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-02.png"
                                       alt=""
                                     />
                                   </div>
@@ -518,7 +535,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="./images/screen-03.png"
+                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-03.png"
                                       alt=""
                                     />
                                   </div>
@@ -536,7 +553,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="./images/screen-04.png"
+                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-04.png"
                                       alt=""
                                     />
                                   </div>
@@ -546,7 +563,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="./images/screen-05.png"
+                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-05.png"
                                       alt=""
                                     />
                                   </div>
@@ -556,7 +573,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="./images/screen-02.png"
+                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-02.png"
                                       alt=""
                                     />
                                   </div>
