http to https fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     >
       <a href="#home" class="navbar-brand">
         <img
-          src="http://d2dtjea2l357xb.cloudfront.net/logo-small.png"
+          src="https://d2dtjea2l357xb.cloudfront.net/logo-small.png"
           alt=""
           srcset=""
         />
@@ -73,7 +73,7 @@
               <div class="logo text-center">
                 <img
                   class="img-fluid"
-                  src="http://d2dtjea2l357xb.cloudfront.net/logo.png"
+                  src="https://d2dtjea2l357xb.cloudfront.net/logo.png"
                   alt=""
                   srcset=""
                 />
@@ -100,7 +100,7 @@
               <div class="home-phone">
                 <img
                   class="img-cellphone-home img-fluid"
-                  src="http://d2dtjea2l357xb.cloudfront.net/iphone-home.png"
+                  src="https://d2dtjea2l357xb.cloudfront.net/iphone-home.png"
                   alt="Home Iphone"
                   srcset=""
                 />
@@ -136,7 +136,7 @@
               <!-- About Iphone -->
               <div class="about-iphone">
                 <img
-                  src="http://d2dtjea2l357xb.cloudfront.net/about-iphone.png"
+                  src="https://d2dtjea2l357xb.cloudfront.net/about-iphone.png"
                   alt="Iphone"
                   srcset=""
                 />
@@ -235,7 +235,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active text-center">
                     <img
-                      src="http://d2dtjea2l357xb.cloudfront.net/client-01.jpg"
+                      src="https://d2dtjea2l357xb.cloudfront.net/client-01.jpg"
                       alt="First Testimonial"
                     />
                     <div class="testimonial-caption">
@@ -251,7 +251,7 @@
                   </div>
                   <div class="carousel-item text-center">
                     <img
-                      src="http://d2dtjea2l357xb.cloudfront.net/client-02.jpg"
+                      src="https://d2dtjea2l357xb.cloudfront.net/client-02.jpg"
                       alt="Second Testimonial"
                     />
                     <div class="testimonial-caption">
@@ -267,7 +267,7 @@
                   </div>
                   <div class="carousel-item text-center">
                     <img
-                      src="http://d2dtjea2l357xb.cloudfront.net/client-03.jpg"
+                      src="https://d2dtjea2l357xb.cloudfront.net/client-03.jpg"
                       alt="Third Testimonial"
                     />
                     <div class="testimonial-caption">
@@ -388,7 +388,7 @@
             <div class="col-md-4">
               <div class="feature-iphone">
                 <img
-                  src="http://d2dtjea2l357xb.cloudfront.net/iphone-02.png"
+                  src="https://d2dtjea2l357xb.cloudfront.net/iphone-02.png"
                   alt="Feature Iphone"
                 />
               </div>
@@ -515,7 +515,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-01.png"
+                                      src="https://d2dtjea2l357xb.cloudfront.net/screen-01.png"
                                       alt=""
                                     />
                                   </div>
@@ -525,7 +525,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-02.png"
+                                      src="https://d2dtjea2l357xb.cloudfront.net/screen-02.png"
                                       alt=""
                                     />
                                   </div>
@@ -535,7 +535,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-03.png"
+                                      src="https://d2dtjea2l357xb.cloudfront.net/screen-03.png"
                                       alt=""
                                     />
                                   </div>
@@ -553,7 +553,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-04.png"
+                                      src="https://d2dtjea2l357xb.cloudfront.net/screen-04.png"
                                       alt=""
                                     />
                                   </div>
@@ -563,7 +563,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-05.png"
+                                      src="https://d2dtjea2l357xb.cloudfront.net/screen-05.png"
                                       alt=""
                                     />
                                   </div>
@@ -573,7 +573,7 @@
                                   <div class="screen-item">
                                     <img
                                       class="img-fluid"
-                                      src="http://d2dtjea2l357xb.cloudfront.net/screen-02.png"
+                                      src="https://d2dtjea2l357xb.cloudfront.net/screen-02.png"
                                       alt=""
                                     />
                                   </div>
